--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,10 @@ android {
     compileSdkVersion 27
     buildToolsVersion '27.0.3'
 
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
     signingConfigs {
         travis {
             storeFile file("debug.jks")
@@ -104,6 +108,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.github.florent37:fiftyshadesof:1.0.0'
     implementation 'me.jfenn:attribouter:0.0.5'
+    testImplementation 'junit:junit:4.12'
 }
 
 repositories {
